# CTSegmentation

./: CMakeLists.txt  dicom2jpg.cpp  dicom2jpg.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  test.cpp  ui_mainwindow.h  vtk2opencv.cpp  vtk2opencv.h
